spacing fix

--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -470,6 +470,9 @@
 @media (max-width:767px) {
   .influencer-profile-detail {
     text-align: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    bottom: 8px;
   }
 
   .influencer-profile-detail h1 {
